[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/match_viewer_3d/match_viewer_3d.gd" id="1_viewer"]
[ext_resource type="PackedScene" path="res://scenes/match_viewer_3d/Ball3D.tscn" id="2_ball"]
[ext_resource type="PackedScene" path="res://scenes/match_viewer_3d/StadiumEnvironment.tscn" id="3_stadium"]

[sub_resource type="BoxMesh" id="BoxMesh_field"]
size = Vector3(105, 0.1, 68)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_field"]
albedo_color = Color(0.15, 0.55, 0.15, 1)

[sub_resource type="Environment" id="Environment_main"]
background_mode = 1
background_color = Color(0.4, 0.6, 0.85, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.35
tonemap_mode = 2
ssao_enabled = true
ssao_radius = 1.0
ssao_intensity = 1.5

[sub_resource type="BoxMesh" id="BoxMesh_lines"]
size = Vector3(105.5, 0.11, 68.5)

[node name="MatchViewer3D" type="Node3D"]
script = ExtResource("1_viewer")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_main")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.354, 0.354, 0, 0.707, 0.707, -0.5, -0.612, 0.612, 20, 30, 20)
light_color = Color(1, 0.98, 0.95, 1)
light_energy = 1.2
shadow_enabled = true

[node name="StadiumEnvironment" parent="." instance=ExtResource("3_stadium")]

[node name="Field" type="Node3D" parent="."]

[node name="FieldMesh" type="MeshInstance3D" parent="Field"]
mesh = SubResource("BoxMesh_field")
surface_material_override/0 = SubResource("StandardMaterial3D_field")

[node name="Ball" parent="." instance=ExtResource("2_ball")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.11, 0)

[node name="HomeTeam" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="AwayTeam" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.866, 0.5, 0, -0.5, 0.866, 0, 40, 60)
fov = 50.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreOverlay" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="ScoreLabel" type="Label" parent="UI/ScoreOverlay"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 50.0
horizontal_alignment = 1
vertical_alignment = 1
text = "Home 0 - 0 Away"

[node name="TimeLabel" type="Label" parent="UI/ScoreOverlay"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 50.0
horizontal_alignment = 2
vertical_alignment = 1
text = "00:00"
